<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:scrollbars="vertical"
    android:layout_marginBottom="60dp"
    tools:context=".ui.reportes.CrearReporteFragment">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            android:orientation="vertical"
            android:background="@color/white" >

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="5dp"
                android:text="@string/registro_atencion"
                android:textColor="@color/black"
                android:textSize="20sp"
                android:textStyle="bold" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="20dp"
                android:text="@string/registro_atencion_subtitulo" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="5dp"
                android:text="@string/nro_solicitud"
                android:textColor="@color/black"
                android:textStyle="bold"
                android:labelFor="@id/numero_solicitud"/>

            <EditText
                android:id="@+id/txt_numero_solicitud"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:layout_marginBottom="20dp"
                android:background="@drawable/bordered_edittext"
                android:paddingStart="10dp"
                android:paddingEnd="10dp"
                android:inputType="text"
                android:autofillHints=""/>

            <ImageView
                android:id="@+id/img_maquinaria"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="20dp"
                android:layout_marginBottom="20dp"
                android:contentDescription="@string/empty_text"
                app:srcCompat="@drawable/unimaq_logo" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="5dp"
                android:text="@string/maquinaria"
                android:textColor="@color/black"
                android:textStyle="bold"/>

            <EditText

                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:layout_marginBottom="20dp"
                android:paddingStart="10dp"
                android:paddingEnd="10dp"
                android:background="@drawable/bordered_edittext"
                android:autofillHints=""
                android:inputType="text"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="5dp"
                android:text="@string/nro_serie"
                android:textColor="@color/black"
                android:textStyle="bold"/>

            <EditText
                android:id="@+id/txt_numero_serie"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:layout_marginBottom="20dp"
                android:paddingStart="10dp"
                android:paddingEnd="10dp"
                android:background="@drawable/bordered_edittext"
                android:autofillHints=""
                android:inputType="text"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="5dp"
                android:text="@string/anho_fabricacion"
                android:textColor="@color/black"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/txt_anho_fabricacion"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:layout_marginBottom="20dp"
                android:paddingStart="10dp"
                android:paddingEnd="10dp"
                android:background="@drawable/bordered_edittext"
                android:autofillHints=""
                android:inputType="text"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="5dp"
                android:text="@string/ultimo_mantenimiento"
                android:textColor="@color/black"
                android:textStyle="bold"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:weightSum="12"
                android:layout_marginBottom="20dp">

                <EditText
                    android:id="@+id/txt_ultimo_mantenimiento"
                    android:layout_width="0dp"
                    android:layout_height="40dp"
                    android:layout_marginBottom="20dp"
                    android:layout_weight="7"
                    android:paddingStart="10dp"
                    android:paddingEnd="10dp"
                    android:layout_marginEnd="15dp"
                    android:background="@drawable/bordered_edittext"
                    android:autofillHints=""
                    android:inputType="text"/>

                <Button
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="5"
                    android:text="@string/ver_historial_text" />

            </LinearLayout>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="5dp"
                android:text="@string/ingrese_horometro"
                android:textColor="@color/black"
                android:textStyle="bold"/>

            <EditText
                android:id="@+id/txt_horometro"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:layout_marginBottom="20dp"
                android:paddingStart="10dp"
                android:paddingEnd="10dp"
                android:background="@drawable/bordered_edittext"
                android:hint="@string/ingrese_horometro_hint"
                android:autofillHints=""
                android:inputType="text"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="5dp"
                android:text="@string/ingrese_stir_2"
                android:textColor="@color/black"
                android:textStyle="bold"/>

            <EditText
                android:id="@+id/txt_stir_2"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:layout_marginBottom="20dp"
                android:paddingStart="10dp"
                android:paddingEnd="10dp"
                android:background="@drawable/bordered_edittext"
                android:hint="@string/ingrese_strir_2_hint"
                android:autofillHints=""
                android:inputType="text"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_marginBottom="30dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:weightSum="4"
                    android:layout_marginBottom="10dp">

                    <CheckBox
                        android:id="@+id/chk_revision_hidraulica"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/revision_hidraulica"
                        android:checked="false"
                        android:layout_weight="3"
                        android:textSize="15sp"
                        android:layout_gravity="center_vertical" />

                    <ImageView
                        android:layout_width="60dp"
                        android:layout_height="47dp"
                        android:layout_gravity="end"
                        android:contentDescription="@string/empty_text"
                        app:srcCompat="@drawable/no_image_icon"
                        android:layout_weight="1"/>

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:weightSum="4"
                    android:layout_marginBottom="10dp">

                    <CheckBox
                        android:id="@+id/chk_revision_aceite"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/revision_aceite"
                        android:checked="false"
                        android:textSize="15sp"
                        android:layout_weight="3"
                        android:layout_gravity="center_vertical" />

                    <ImageView
                        android:layout_width="60dp"
                        android:layout_height="47dp"
                        android:layout_gravity="end"
                        android:contentDescription="@string/empty_text"
                        app:srcCompat="@drawable/no_image_icon"
                        android:layout_weight="1"/>

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:weightSum="4"
                    android:layout_marginBottom="10dp">

                    <CheckBox
                        android:id="@+id/chk_revision_calibracion"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/revision_calibracion"
                        android:checked="false"
                        android:textSize="15sp"
                        android:layout_weight="3"
                        android:layout_gravity="center_vertical" />

                    <ImageView
                        android:layout_width="60dp"
                        android:layout_height="47dp"
                        android:layout_gravity="end"
                        android:contentDescription="@string/empty_text"
                        app:srcCompat="@drawable/no_image_icon"
                        android:layout_weight="1"/>

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:weightSum="4"
                    android:layout_marginBottom="10dp">

                    <CheckBox
                        android:id="@+id/chk_revision_neumaticos"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/revision_neumaticos"
                        android:checked="false"
                        android:textSize="15sp"
                        android:layout_weight="3"
                        android:layout_gravity="center_vertical" />

                    <ImageView
                        android:layout_width="60dp"
                        android:layout_height="47dp"
                        android:layout_gravity="end"
                        android:contentDescription="@string/empty_text"
                        app:srcCompat="@drawable/no_image_icon"
                        android:layout_weight="1"/>

                </LinearLayout>
                
            </LinearLayout>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="5dp"
                android:text="@string/ingrese_observaciones"
                android:textColor="@color/black"
                android:textStyle="bold"/>

            <EditText
                android:id="@+id/txt_observaciones"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:layout_marginBottom="40dp"
                android:paddingStart="10dp"
                android:paddingEnd="10dp"
                android:background="@drawable/bordered_edittext"
                android:hint="@string/ingrese_observaciones_hint"
                android:autofillHints=""
                android:inputType="text"/>

            <LinearLayout
                android:baselineAligned="false"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal"
                android:layout_gravity="center_horizontal"
                android:weightSum="2"
                android:layout_marginBottom="30dp">

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:layout_marginEnd="30dp"
                    android:layout_weight="1">

                    <ImageView
                        android:layout_width="100dp"
                        android:layout_height="79dp"
                        android:layout_gravity="end"
                        android:contentDescription="@string/empty_text"
                        app:srcCompat="@drawable/no_image_icon"
                        android:layout_marginBottom="20dp" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="end"
                        android:text="@string/firma_tecnico" />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:layout_weight="1">

                    <ImageView
                        android:layout_width="100dp"
                        android:layout_height="79dp"
                        android:contentDescription="@string/empty_text"
                        android:layout_gravity="start"
                        app:srcCompat="@drawable/no_image_icon"
                        android:layout_marginBottom="20dp" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="5dp"
                        android:layout_gravity="start"
                        android:text="@string/firma_supervisor" />

                </LinearLayout>

            </LinearLayout>

            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="20dp"
                android:text="@string/subir_informe_text"/>

        </LinearLayout>


</ScrollView>